# high-performance-search-engine

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: enwiki_queries.txt  home_queries.txt  queries.txt  sample_docs.jsonl  wiki_queries.txt
docs/: THEORY.md
examples/: cirrus_convert.rs  http_load.rs
scripts/: cirrus_to_jsonl.py  crawl_to_jsonl.py  make_queries.py
src/: api.rs  bench.rs  block_max_wand.rs  bm25.rs  cli.rs  compress.rs  external.rs  indexer.rs  lib.rs  main.rs  maxscore.rs  migrate.rs  postings.rs  reorder.rs  searcher.rs  segments.rs  storage.rs  tokenizer.rs
src/reorder/: gpu.rs
tests/: bmw_correctness.rs  disk_and_reorder.rs  external_build.rs  segments.rs
