[package]
name = "high-performance-search-engine"
version = "0.1.0"
edition = "2021"
description = "Single-node high-performance search engine: lexical BM25 retrieval with exact Block-Max WAND"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jasonthird/high-performance-search-engine"
keywords = ["search-engine", "bm25", "inverted-index", "full-text-search", "wand"]
categories = ["text-processing", "algorithms", "database-implementations"]

[dependencies]
anyhow = "1"
axum = "0.7"
bincode = "1"
bytemuck = "1.25.0"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
objc2 = { version = "0.6.4", optional = true }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSString", "NSError"], optional = true }
objc2-metal = { version = "0.3.2", optional = true }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = "0.17.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

[features]
# GPU-accelerated BP document reordering: zero-copy Metal via objc2
# (macOS only). Off by default.
gpu = ["dep:objc2", "dep:objc2-foundation", "dep:objc2-metal"]
